add Spring Email

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,6 +25,9 @@
     <label>
         <input type="password" name="password" placeholder="password"/>
     </label><br>
+    <label>
+        <input type="password" name="confirmPassword" placeholder="password"/>
+    </label><br>
     <select name="role">
         <option value="USER">user</option>
         <option value="ADMIN">admin</option>
