--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -3,14 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="//code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link href="//cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet"/>
+    <script src="//cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
 
-<ul th:each="book: ${books}">
-    <li th:text="${book}"></li>
-    <a th:href="@{/deleteBook(id=${book.id})}" style="color: red">x</a>
-    <a th:href="@{/getBookById(id=${book.id})}">update</a>
-</ul>
+<table id="books" border="1">
+    <thead>
+    <tr>
+        <td>title</td>
+        <td>description</td>
+        <td>price</td>
+        <td>author</td>
+        <td>action</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="book: ${books.content}">
+        <td th:text="${book.title}">title</td>
+        <td th:text="${book.description}">description</td>
+        <td th:text="${book.price}">price</td>
+        <td th:text="${book.author.name}">price</td>
+        <td><a th:href="@{/deleteBook(id=${book.id})}" style="color: red">x</a>
+            <a th:href="@{/getBookById(id=${book.id})}">update</a></td>
+    </tr>
+    </tbody>
 
+</table>
+<div th:if="${books.totalPages > 0}" class="pagination"
+th:each="pageNumber : ${pageNumbers}">
+    <a th:href="@{/allBooks(size=${books.size}, page=${pageNumber})}"
+       th:text="${pageNumber}"
+       th:class="${pageNumber==books.number + 1} ? active"></a>
+</div>
+<!--<script>-->
+<!--    $(document).ready(function () {-->
+<!--        $('#books').DataTable();-->
+<!--    })-->
+<!--</script>-->
 </body>
 </html>
