--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -6,14 +6,16 @@
 </head>
 <body>
 
-<div th:value="${book}" th:text="${book}"></div>
+<div th:value="${book}" th:text="${book}"></div><br>
+<header th:insert="fragments/general.html::header"></header>
+
 <h2>update book</h2>
 <form th:action="@{/addBook(id=${book.id})}" method="post">
     <input type="text" name="title" th:value="${book.title}"/><br>
     <textarea name="description" th:text="${book.description}"></textarea><br>
     <input name="price" type="text"  th:value="${book.price}"/><br>
     <select name="author.id">
-        <option th:each="author: ${a}" th:value="${author.id}" th:text="${author.name}" th:selected="${book.author.id == author.id}"></option>
+        <option th:each="author: ${authors}" th:value="${author.id}" th:text="${author.name}" th:selected="${book.author.id == author.id}"></option>
     </select><br>
     <input type="submit" value="update">
 </form>
