--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -8,7 +8,7 @@
     <script src="//cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
-
+<a href="/" style="text-decoration: none; color: black">back</a><br>
 <table id="books" border="1">
     <thead>
     <tr>
