--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,7 +44,7 @@
     <input type="submit" name="add">
 </form>
 
-<a href="/allAuthors">authors</a>
+<a href="/allAuthors" th:text="#{home.menu.authors.page}">authors</a>
 <h2>Add book</h2>
 <form action="/addBook" method="post">
     <input type="text" name="title" placeholder="title"/><br>
@@ -55,7 +55,7 @@
     </select><br>
     <input type="submit" value="add">
 </form>
-<a href="/allBooks">books</a>
+<a href="/allBooks" th:text="#{home.menu.books.page}">books</a>
 
 </body>
 </html>
