add change passwod functionality

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -12,5 +12,11 @@
     <input type="submit" value="login">
 </form>
 
+Forgot password:
+<form action="/author/forgotPassword" method="get">
+    <input type="email" name="email" placeholder="please input your email"><br>
+    <input type="submit" value="OK">
+</form>
+
 </body>
 </html>
